videoencoder: fix forwarding of GstForceKeyUnit events

Use the frame id to match the output forced keyframe with
the event that forced it.

https://bugzilla.gnome.org/show_bug.cgi?id=706885